Fix blurry text

--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -34,6 +34,7 @@ html{
     -webkit-font-feature-settings: "kern";
     -moz-font-feature-settings: "kern";
     font-feature-settings: "kern";
+    -webkit-perspective: 1000;
 }
 
 h1 {font-size: 2.75rem !important;}
@@ -42,12 +43,14 @@ h3 {font-size: 1.75rem !important;}
 h4 {font-size: 1.5rem !important;}
 h5 {font-size: 1.25rem !important;}
 h6 {font-size: 1.15rem !important;}
-p {font-size: 1rem !important; line-height: 1.25 !important;}
+p {font-size: 1rem !important; line-height: 1.25 !important;
+  transform: translateZ(0);}
 
 body{
     width: 100%; height: 100vh;
     background: $primary_dark;
     cursor: default;
+    transform: translateZ(0);
 }
 
 .btn{
@@ -67,6 +70,7 @@ body{
     text-transform: uppercase;
     transition: all 0.25s ease-in-out;
     cursor: pointer;
+    transform: translateZ(0);
     &:hover{
         border: solid 2px rgba($white, 0.75) !important;
         background: rgba($white, 0.9);
@@ -113,6 +117,7 @@ input[type='password']{
     font-size: 1rem;
     border: solid 2px rgba($black, 0.125);
     outline: none;
+    transform: translateZ(0);
 }
 
 #container{
